--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.gitignore.io/api/svn,eclipse
-# Edit at https://www.gitignore.io/?templates=svn,eclipse
+# Created by https://www.gitignore.io/api/svn,java,eclipse
+# Edit at https://www.gitignore.io/?templates=svn,java,eclipse
 
 ### Eclipse ###
 .metadata
@@ -71,7 +71,32 @@ local.properties
 
 .sts4-cache/
 
+### Java ###
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
 ### SVN ###
 .svn/
 
-# End of https://www.gitignore.io/api/svn,eclipse
+# End of https://www.gitignore.io/api/svn,java,eclipse
